--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@
                     </div>
 
                     <div class="item">
-                        <h1>Project 2</h1>
-                        <img src="" alt="">
-                        <button class="btnDemo"><a href="#">Demo</a></button>
+                        <h1>coffee shop</h1>
+                        <img src="./img/blog-2.jpg" alt="">
+                        <button class="btnDemo"><a href="https://duykhang0.github.io/Web-Reponsive-coffee-shop/">Demo</a></button>
                     </div>
 
                     <div class="item">
