--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@
                     </div>
 
                     <div class="item">
-                        <h1>Project 3</h1>
-                        <img src="" alt="">
-                        <button class="btnDemo"><a href="#">Demo</a></button>
+                        <h1>Marvel</h1>
+                        <img src="./img/marvel.jpg" alt="">
+                        <button class="btnDemo"><a href="https://duykhang0.github.io/marvel/">Loading 50%</a></button>
                     </div>
 
                     <div class="item">
