--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                     <div class="item">
                         <h1>Marvel</h1>
                         <img src="./img/marvel.jpg" alt="">
-                        <button class="btnDemo"><a href="https://duykhang0.github.io/marvel/">Loading 50%</a></button>
+                        <button class="btnDemo"><a href="https://duykhang0.github.io/marvel/">Demo</a></button>
                     </div>
 
                     <div class="item">
